Fixed bug where dropdown arrows would wrap to new line

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -10683,6 +10683,13 @@ a.text-dark:focus {
   }
 }
 
+.dropdown-toggle::after {
+  position: absolute;
+  right: -10px;
+  top: 50%;
+  display: inline-block !important;
+}
+
 .cta {
   padding: 0.85rem 1.7rem;
   line-height: 0.85rem;
