--- a/public/css/style.css
+++ b/public/css/style.css
@@ -402,6 +402,13 @@
   }
 }
 
+.dropdown-toggle::after {
+  position: absolute;
+  right: -10px;
+  top: 50%;
+  display: inline-block !important;
+}
+
 .cta {
   padding: 0.85rem 1.7rem;
   line-height: 0.85rem;
@@ -11002,6 +11009,350 @@ a.text-dark:focus {
   }
 }
 
+.color-primary-0 {
+  color: #009489 !important;
+}
+
+/* Main Primary color */
+
+.color-primary-1 {
+  color: #3EB2AA !important;
+}
+
+.color-primary-2 {
+  color: #1CA59B !important;
+}
+
+.color-primary-3 {
+  color: #00766D !important;
+}
+
+.color-primary-4 {
+  color: #005C55 !important;
+}
+
+.color-secondary-1-0 {
+  color: #DC0037 !important;
+}
+
+/* Main Secondary color (1) */
+
+.color-secondary-1-1 {
+  color: #EE5279 !important;
+}
+
+.color-secondary-1-2 {
+  color: #EA2758 !important;
+}
+
+.color-secondary-1-3 {
+  color: #AF002C !important;
+}
+
+.color-secondary-1-4 {
+  color: #890022 !important;
+}
+
+.color-secondary-2-0 {
+  color: #54D400 !important;
+}
+
+/* Main Secondary color (2) */
+
+.color-secondary-2-1 {
+  color: #8BE750 !important;
+}
+
+.color-secondary-2-2 {
+  color: #70E326 !important;
+}
+
+.color-secondary-2-3 {
+  color: #42A900 !important;
+}
+
+.color-secondary-2-4 {
+  color: #348400 !important;
+}
+
+.color-complement-0 {
+  color: #F16900 !important;
+}
+
+/* Main Complement color */
+
+.color-complement-1 {
+  color: #FFA158 !important;
+}
+
+.color-complement-2 {
+  color: #FF872B !important;
+}
+
+.color-complement-3 {
+  color: #C05300 !important;
+}
+
+.color-complement-4 {
+  color: #964100 !important;
+}
+
+.bg-color-primary-0 {
+  background-color: #009489 !important;
+}
+
+/* Main Primary color */
+
+.bg-color-primary-1 {
+  background-color: #3EB2AA !important;
+}
+
+.bg-color-primary-2 {
+  background-color: #1CA59B !important;
+}
+
+.bg-color-primary-3 {
+  background-color: #00766D !important;
+}
+
+.bg-color-primary-4 {
+  background-color: #005C55 !important;
+}
+
+.bg-color-secondary-1-0 {
+  background-color: #DC0037 !important;
+}
+
+/* Main Secondary color (1) */
+
+.bg-color-secondary-1-1 {
+  background-color: #EE5279 !important;
+}
+
+.bg-color-secondary-1-2 {
+  background-color: #EA2758 !important;
+}
+
+.bg-color-secondary-1-3 {
+  background-color: #AF002C !important;
+}
+
+.bg-color-secondary-1-4 {
+  background-color: #890022 !important;
+}
+
+.bg-color-secondary-2-0 {
+  background-color: #54D400 !important;
+}
+
+/* Main Secondary color (2) */
+
+.bg-color-secondary-2-1 {
+  background-color: #8BE750 !important;
+}
+
+.bg-color-secondary-2-2 {
+  background-color: #70E326 !important;
+}
+
+.bg-color-secondary-2-3 {
+  background-color: #42A900 !important;
+}
+
+.bg-color-secondary-2-4 {
+  background-color: #348400 !important;
+}
+
+.bg-color-complement-0 {
+  background-color: #F16900 !important;
+}
+
+/* Main Complement color */
+
+.bg-color-complement-1 {
+  background-color: #FFA158 !important;
+}
+
+.bg-color-complement-2 {
+  background-color: #FF872B !important;
+}
+
+.bg-color-complement-3 {
+  background-color: #C05300 !important;
+}
+
+.bg-color-complement-4 {
+  background-color: #964100 !important;
+}
+
+.bg-color-white,
+.white {
+  background-color: #fff;
+}
+
+.text-white {
+  color: #fff !important;
+}
+
+.bg-color-black,
+.black {
+  background-color: #111111;
+}
+
+.text-black {
+  color: #111111 !important;
+}
+
+.nounderline {
+  text-decoration: none !important;
+}
+
+.navbar-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 992px) {
+  .navbar-nav {
+    display: block;
+  }
+}
+
+.dropdown-toggle::after {
+  position: absolute;
+  right: -10px;
+  top: 50%;
+  display: inline-block !important;
+}
+
+.cta {
+  padding: 0.85rem 1.7rem;
+  line-height: 0.85rem;
+  font-size: 0.85rem;
+  height: 2.55rem;
+  border-radius: 1.7rem;
+  width: auto;
+  font-weight: 700;
+  cursor: pointer;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  -webkit-transition: background-color 0.3s, color 0.3s;
+  /* Safari */
+  transition: background-color 0.3s, color 0.3s;
+  border-radius: 2rem;
+  float: left;
+}
+
+@media (min-width: 992px) {
+  .cta {
+    display: inline-block;
+  }
+}
+
+.cta-large {
+  padding: 1rem 2rem;
+  line-height: 1rem;
+  font-size: 1rem;
+  height: 3rem;
+}
+
+.cta-small {
+  padding: 0.75rem 1.5rem;
+  line-height: 0.75rem;
+  font-size: 0.8rem;
+  height: 2.25rem;
+  font-weight: 400;
+}
+
+.cta-rounded {
+  padding: 0.75 0;
+}
+
+.cta-form-group {
+  padding: 0.75rem 1.5rem;
+  line-height: 0.75rem;
+  font-size: 0.8rem;
+  height: calc(2.25rem + 2px);
+  font-weight: 400;
+}
+
+.cta-tertiary {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.cta:hover {
+  text-decoration: none;
+}
+
+.cta-primary {
+  background-color: #DC0037 !important;
+  color: #fff !important;
+}
+
+.cta-primary:hover {
+  background-color: #EA2758 !important;
+  color: #e9e8e8 !important;
+}
+
+.cta-secondary,
+.secondary-color {
+  background-color: #fff !important;
+  color: #DC0037 !important;
+}
+
+.cta-secondary {
+  border: 1px solid #DC0037 !important;
+}
+
+.cta-secondary:hover,
+.secondary-color:hover {
+  background-color: #EA2758 !important;
+  color: #fff !important;
+}
+
+.cta-tertiary {
+  text-decoration: underline;
+}
+
+.opacity-hover {
+  opacity: 0.2;
+}
+
+.opacity-hover:hover {
+  opacity: 1;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.nr-l,
+.nr-t {
+  border-top-left-radius: 0 !important;
+}
+
+.nr-r,
+.nr-t {
+  border-top-right-radius: 0 !important;
+}
+
+.nr-l,
+.nr-b {
+  border-bottom-left-radius: 0 !important;
+}
+
+.nr-r,
+.nr-b {
+  border-bottom-right-radius: 0 !important;
+}
+
 /*@font-face {
     font-family: NHG-Bold;
     src: url(/fonts/NHaasGroteskTXPro-75Bd.ttf);
@@ -11021,6 +11372,19 @@ h1,h2,h3,h4,h5,h6, .navbar-brand {
 	font-stretch: normal;
 	font-style: normal;
 }*/
+
+body,
+html {
+  height: 100%;
+  color: #005C55;
+}
+
+@media (min-width: 992px) {
+  body,
+  html {
+    font-size: 18px;
+  }
+}
 
 [v-cloak] {
   display: none;
