--- a/resources/assets/sass/_components.scss
+++ b/resources/assets/sass/_components.scss
@@ -26,6 +26,13 @@
 	}
 }
 
+.dropdown-toggle::after {
+	position: absolute;
+	right: -10px;
+	top: 50%;
+	display: inline-block !important;
+}
+
 .cta {
 	padding: 0.85rem 1.7rem;
 	line-height: 0.85rem;
